Refactor list access to use getLast() and toList()
Replaced usage of .get(size - 1) with .getLast() for retrieving the last element in lists, and replaced Collectors.toList() with .toList() for stream collection. This improves code readability and leverages newer Java features.